--- a/index02.html
+++ b/index02.html
@@ -17,7 +17,7 @@
 
   <div class="grid-container">
     <header class="header">
-      Header2
+      Header
     </header>
 
     <main class="main">
