--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>01MD Massimo Dutti</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/holygrailcss@1.8.65/dist/style.css" rel="stylesheet">
-  <link href="css/massimodutti_01.css" rel="stylesheet">
-
+  <title>MS</title>
 </head>
 
 <body>
 
-  <main>
-    <header>Header</header>
-    <nav>Nav</nav>
-    <section>Section</section>
-    <aside>Aside</aside>
-    <footer>Footer</footer>
-  </main>
+
+  <h1>List</h1>
+
+  <ul>
+    <li><a href="/index01.html">01</a></li>
+    <li><a href="/index02.html">02</a></li>
+  </ul>
+
+
 
 </body>
 
