--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <h1>List</h1>
 
   <ul>
-    <li><a href="/index01.html">01</a></li>
-    <li><a href="/index02.html">02</a></li>
+    <li><a href="./index01.html">01</a></li>
+    <li><a href="./index02.html">02</a></li>
   </ul>
 
 
