--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <body>
 
+  <div class="d-flex align-items-center justify-content-center" style="height: 250px;">
+    <h1>List</h1>
 
-  <h1>List</h1>
-
-  <ul>
-    <li><a href="./index01.html">01</a></li>
-    <li><a href="./index02.html">02</a></li>
-  </ul>
-
+    <ul class="list-inline">
+      <li><a class="btn btn-primary btn-lg list-inline-item" href="./index01.html">01</a></li>
+      <li><a class="btn btn-primary btn-lg list-inline-item" href="./index02.html">02</a></li>
+    </ul>
+  </div>
 
 
 </body>
