--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <h1>List</h1>
 
     <ul class="list-inline">
-      <li><a class="btn btn-primary btn-lg list-inline-item" href="./index01.html">01</a></li>
-      <li><a class="btn btn-primary btn-lg list-inline-item" href="./index02.html">02</a></li>
+      <li class="list-inline-item"><a class="btn btn-primary btn-lg" href="./index01.html">01</a>
+      </li>
+      <li class="list-inline-item"><a class="btn btn-primary btn-lg" href="./index02.html">02</a>
+      </li>
     </ul>
   </div>
 
