--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
     crossorigin="anonymous">
 
+  <style>
+    body {
+      height: 100vh;
+    }
+
+    .container {
+      height: 100%;
+    }
+  </style>
+
 </head>
 
 <body>
 
-  <div class="d-flex align-items-center justify-content-center" style="height: 250px;">
+  <div class="container d-flex align-items-center justify-content-center">
     <h1>List</h1>
 
     <ul class="list-inline">
