--- a/index.html
+++ b/index.html
@@ -28,17 +28,26 @@
 
 <body>
 
-  <div class="container d-flex align-items-center justify-content-center">
-    <h1>List</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col">
 
-    <ul class="list-inline">
-      <li class="list-inline-item"><a class="btn btn-primary btn-lg" href="./index01.html">01</a>
-      </li>
-      <li class="list-inline-item"><a class="btn btn-primary btn-lg" href="./index02.html">02</a>
-      </li>
-    </ul>
+        <div class="d-flex align-items-center justify-content-center">
+          <h1>List</h1>
+
+          <ul class="list-inline">
+            <li class="list-inline-item"><a class="btn btn-primary btn-lg"
+                href="./index01.html">01</a>
+            </li>
+            <li class="list-inline-item"><a class="btn btn-primary btn-lg"
+                href="./index02.html">02</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
   </div>
-
 
 </body>
 
