--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <div class="col">
 
         <div class="d-flex align-items-center justify-content-center">
-          <h1>List</h1>
+          <h1 class="display-5 fw-bold">List</h1>
 
-          <ul class="list-inline">
+          <ul class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <li class="list-inline-item"><a class="btn btn-primary btn-lg"
                 href="./index01.html">01</a>
             </li>
