--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
         <div class="d-flex align-items-center justify-content-center">
           <h1 class="display-5 fw-bold">List</h1>
 
-          <ul class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <li class="list-inline-item"><a class="btn btn-primary btn-lg"
-                href="./index01.html">01</a>
-            </li>
-            <li class="list-inline-item"><a class="btn btn-primary btn-lg"
-                href="./index02.html">02</a>
-            </li>
-          </ul>
+          <div>
+            <ul class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+              <li class="list-inline-item"><a class="btn btn-primary btn-lg"
+                  href="./index01.html">01</a>
+              </li>
+              <li class="list-inline-item"><a class="btn btn-primary btn-lg"
+                  href="./index02.html">02</a>
+              </li>
+            </ul>
+          </div>
+
         </div>
 
       </div>
