--- a/flex01.html
+++ b/flex01.html
@@ -5,14 +5,137 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
   <title>flex01</title>
 </head>
 
+
+<style>
+  /* https://angrytools.com/css-flex/ */
+  .FlexContainer1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #bbdefb;
+    height: 100%;
+    padding: 15px;
+    gap: 5px;
+  }
+
+  .item1,
+  .item2 {
+    background: #ffecb3;
+    border: 5px solid #ffcc80;
+    border-radius: 5px;
+    padding: 8px;
+  }
+
+  /* https://flexbox.buildwithreact.com/ */
+  .FlexContainer2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    min-height: 300px;
+    background-color: yellow;
+  }
+
+  .item2a {
+    position: absolute;
+    top: -5px;
+    right: 0px;
+  }
+
+
+  /* https://cssflex-generator.netlify.app/ */
+
+  .FlexContainer3 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    background-color: #2f1d58;
+    height: 60vh;
+    overflow: auto;
+    flex-direction: row;
+  }
+
+  .FlexContainer3 div {
+    width: 100px;
+    height: 100px;
+    margin: 15px;
+    background-color: lightblue;
+  }
+
+  /* Responsive layout - makes a one column layout instead of a two-column layout */
+  @media (max-width: 800px) {
+
+    .FlexContainer1,
+    .FlexContainer3 {
+      flex-direction: column;
+    }
+  }
+
+
+
+  .flex-container {
+    display: flex;
+    flex-direction: row;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .flex-item-left {
+    background-color: #f1f1f1;
+    padding: 10px;
+    flex: 50%;
+  }
+
+  .flex-item-right {
+    background-color: dodgerblue;
+    padding: 10px;
+    flex: 50%;
+  }
+
+  /* Responsive layout - makes a one column-layout instead of two-column layout */
+  @media (max-width: 800px) {
+    .flex-container {
+      flex-direction: column;
+    }
+  }
+</style>
+
+
 <body>
+  https://www.ordesakids.com/landings/cuentos/index.html
+  <hr><br><br>
 
 
-  hola1344
 
+
+  <div class="FlexContainer1">
+    <div class="item1">item 1</div>
+    <div class="item2">item 2</div>
+  </div>
+
+  <div class="FlexContainer2">
+    <div class="item1a">item 1</div>
+    <div class="item2a"><img src="https://picsum.photos/id/10/600/300.jpg"></div>
+  </div>
+
+  <div class='FlexContainer3'>
+    <div>1</div>
+    <div>2</div>
+  </div>
+
+
+  <div class="flex-container">
+    <div class="flex-item-left">1</div>
+    <div class="flex-item-right">2</div>
+  </div>
 
 
 </body>
