--- a/flex01.html
+++ b/flex01.html
@@ -47,7 +47,6 @@
     right: 0px;
   }
 
-
   /* https://cssflex-generator.netlify.app/ */
 
   .FlexContainer3 {
@@ -111,7 +110,11 @@
 
 <body>
   https://www.ordesakids.com/landings/cuentos/index.html
-  <hr><br><br>
+  <hr>
+  <a href="https://angrytools.com/css-flex/">https://angrytools.com/css-flex/</a> <br>
+  <a href="https://flexbox.buildwithreact.com/">https://flexbox.buildwithreact.com/</a><br>
+  <a href="https://cssflex-generator.netlify.app/">https://cssflex-generator.netlify.app/</a><br>
+  <br><br>
 
 
 
